# heartlib

./: README.md  pyproject.toml
examples/: run_music_generation.py
src/heartlib/heartcodec/: modeling_heartcodec.py
src/heartlib/heartcodec/models/: sq_codec.py  transformer.py
src/heartlib/heartmula/: modeling_heartmula.py
src/heartlib/pipelines/: music_generation.py
