[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartlib"
version = "0.1.1"
description = "A Python Library."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy==2.4.2",
    "torch==2.10.0+cu130",
    "torchaudio==2.10.0+cu130",
    "torchtune==0.6.1",
    "torchao==0.15.0",
    "torchvision==0.25.0+cu130",
    "tqdm==4.67.2",
    "traitlets==5.14.3",
    #"traittypes==0.2.3",
    "transformers<5.0.0",
    "tokenizers==0.22.2",
    #"ipykernel==6.17.1",
    "einops==0.8.2",
    "accelerate==1.12.0",
    "bitsandbytes==0.49.1",
    "vector-quantize-pytorch==1.27.20",
    #"modelscope==1.33.0",
    "soundfile==0.13.1"
]
urls = { "homepage" = "https://github.com/nalexand/HeartMula-OPTIMIZED-8GB" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

